[package]
name = "rustlab_2020"
version = "0.1.0"
authors = ["bishtpawan <pawan.bisht@knoldus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "native"
path = "src/native/main.rs"

[[bin]]
name = "green"
path = "src/green/main.rs"

[[bin]]
name = "async"
path = "src/async/main.rs"

[[bin]]
name = "future_implementation"
path = "src/future_implementation/main.rs"

[dependencies]
futures = "0.3.5"
async-std = "1.6.3"
